openmetadata-docs/content/v1.1.0/main-concepts/metadata-standard/schemas/api/domains/createDomain.md
---
title: createDomain
slug: /main-concepts/metadata-standard/schemas/api/domains/createdomain
---

# createDomain

*Create Domain API request*

## Properties

- **`domainType`**: Domain type. Refer to *[../../entity/domains/domain.json#/definitions/domainType](#/../entity/domains/domain.json#/definitions/domainType)*.
- **`name`**: A unique name of the Domain. Refer to *[../../type/basic.json#/definitions/entityName](#/../type/basic.json#/definitions/entityName)*.
- **`fullyQualifiedName`**: FullyQualifiedName same as `name`. Refer to *[../../type/basic.json#/definitions/fullyQualifiedEntityName](#/../type/basic.json#/definitions/fullyQualifiedEntityName)*.
- **`displayName`** *(string)*: Name used for display purposes. Example 'Marketing', 'Payments', etc.
- **`description`**: Description of the Domain. Refer to *[../../type/basic.json#/definitions/markdown](#/../type/basic.json#/definitions/markdown)*.
- **`parent`** *(string)*: Fully qualified name of parent domain.
- **`owner`**: Owner of this Domain. Refer to *[../../type/entityReference.json](#/../type/entityReference.json)*. Default: `null`.
- **`experts`** *(array)*: List of of user/login names of users who are experts in this Domain. Default: `null`.
  - **Items** *(string)*


Documentation file automatically generated at 2023-07-16 19:59:36.193714.
